# prReviewer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pr-review.yml  test-action.yml
action/: run_review.py
docs/: github-action-setup.md
examples/: travelsync_demo.patch  travelsync_demo_output.txt
examples/workflows/: ai-pr-review.yml  bulk-commit-pr-review-tailscale.yml  bulk-commit-pr-review.yml  pr-review-command.yml  pr-review.yml  setup-review-workflow-secrets.sh
openspec/changes/add-bulk-commit-multi-model-review/: design.md  proposal.md  tasks.md
openspec/changes/add-bulk-commit-multi-model-review/specs/bulk-commit-review/: spec.md
pr_reviewer/: __init__.py  cli.py  context.py  formatters.py  integrations.py  llm.py  models.py  parsing.py  reviewer.py
tests/: conftest.py  test_action.py  test_cli.py  test_context.py  test_formatters.py  test_integrations.py  test_llm.py  test_parsing.py  test_reviewer.py
